--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
             <h1>Only Free</h1>
             <p>Download The Best HD 4K Wallpapers For Your Desktop</p>
             <div class="find">
-           <input class="sourc" type="text" placeholder="Search" > <span><i class="fa-solid fa-magnifying-glass"></i>  </span>
+           <input class="sourc" type="search" placeholder="Search" > <span><i class="fa-solid fa-magnifying-glass"></i>  </span>
         </div>
     </main>
     <footer>
