--- a/pages/catagory.htm
+++ b/pages/catagory.htm
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" id="logo">
+            <a href="../index.htm" id="logo">
                 <img src="../img/logo.png" alt="logo">
             </a>
             <label for="hamb">
@@ -37,7 +37,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
         </a>
-        <a href="#">
+        <a href="../pages/desktop.htm">
             <div class="card">
                 <img class="about" src="../img/pc.png" alt="logo">
                 <h2>Desktop Wallpapers</h2>
