--- a/pages/about.htm
+++ b/pages/about.htm
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" id="logo">
+            <a href="../index.htm" id="logo">
                 <img src="../img/logo.png" alt="logo">
             </a>
             <label for="hamb">
